--- a/TwinStickTutorial/Assembly-CSharp.csproj
+++ b/TwinStickTutorial/Assembly-CSharp.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Tutorial\CameraScript.cs" />
+     <Compile Include="Assets\Tutorial\EnemyScript.cs" />
      <Compile Include="Assets\Tutorial\KnifeScript.cs" />
      <Compile Include="Assets\Tutorial\PlayerFireScript.cs" />
      <Compile Include="Assets\Tutorial\PlayerMove.cs" />
